# almond-android

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  build.gradle  download-ndk.sh  download-prebuilt-binaries.sh  rebuild-libraries.sh
app/: .build_js.sh.swp  .gitignore  CMakeLists.txt  build.gradle  build_js.sh  download-prebuild-binaries.sh  download-prebuilt-binaries.sh  jxcore_build_default.sh  jxcore_build_leveldown.sh
app/jni/: Android.mk  Android.mk.default  Android.mk.level  Application.mk  jxcore.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: css  fonts  img  index.html  js  jxcore_main.js  jxcore_mock.js  vendor
app/src/main/assets/jxcore/: .gitignore  Makefile  app.js  control.js  java_api.js  location_api.js  notify_api.js  package.json  platform.js
app/src/main/jni/: gmp.h  node-cvc4.cpp  node-cvc4.h  node-cvc4.hpp  node-launcher-marshal.cpp  node-launcher-marshal.hpp  node-launcher-module.cpp  node-launcher-module.hpp  node-launcher-utils.cpp  node-launcher-utils.hpp  node-launcher.cpp
app/src/main/jni/cvc4/: cvc4parser_public.h
app/src/main/jni/nan/: package.json
app/src/main/jni/node/: node.h
app/src/main/jni/node-sqlite3/: CMakeLists.txt
app/src/main/jni/sqlite/: CMakeLists.txt
app/src/main/res/drawable/: page_indicator.xml  page_indicator_current.xml  splash.xml
app/src/main/res/layout/: activity_brassau.xml  activity_cheatsheet.xml  activity_device_configure_choose_kind.xml  activity_device_create_form.xml  activity_device_details.xml  activity_fullscreen_picture.xml  activity_introduction.xml  activity_main.xml  activity_oauth.xml  activity_permissions.xml  activity_rules.xml  activity_settings.xml  activity_test.xml  activity_thingpedia_web_ui.xml  fragment_chat.xml  fragment_my_stuff.xml  (+5 more)
(+214 files in other folders)
