add_library(sqlite STATIC sqlite3.h sqlite3ext.h sqlite3.c)

target_compile_definitions(sqlite PRIVATE
    -DSQLITE_CORE
    -DSQLITE_ENABLE_BROKEN_FTS3
    -DSQLITE_ENABLE_FTS3_PARENTHESIS
    -DSQLITE_ENABLE_FTS3
    -DSQLITE_ENABLE_MEMORY_MANAGEMENT
    -DSQLITE_SECURE_DELETE
    -DSQLITE_SEPARATE_CACHE_POOLS
    -DTHREADSAFE
    -DHAVE_USLEEP=1
    -DSQLITE_DEFAULT_JOURNAL_SIZE_LIMIT=1048576
    -DSQLITE_DEFAULT_AUTOVACUUM=1
    -DSQLITE_TEMP_STORE=3
    -DSQLITE_ENABLE_FTS3_BACKWARDS
    -DSQLITE_DEFAULT_FILE_FORMAT=4
)